<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.CookbookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:minHeight="@dimen/minimum_app_bar_height"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                android:layout_marginRight="@dimen/list_toolbar_side_margin"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <Spinner
                android:id="@+id/meal_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spinner_padding"
                android:entries="@array/meal_array"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/protein_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spinner_padding"
                android:entries="@array/protein_array"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spinner_padding"
                android:entries="@array/category_array"
                android:spinnerMode="dropdown" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/list_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/app_bar_height"-->
<!--        tools:context="com.larsonapps.personalcookbook.RecipeFragment" />-->
    <include
        android:id="@+id/content"
        layout="@layout/recipe_fragment_item_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/fab_background"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_search_24px" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>