<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:inputType="textCapWords"
        android:hint="@string/add_category_edit_text_hint"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/add_category_submit_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>