<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/category_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_horizontal_text_margin"
            android:layout_marginTop="@dimen/list_top_text_margin"
            android:layout_weight="8"
            style="@style/ListItemHeadingStyle"
            android:textColor="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/category_delete_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_icon_margin"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:padding="@dimen/edit_icon_padding"
            android:src="@drawable/ic_delete_24px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/list_divider_margin"
        android:layout_marginBottom="@dimen/list_divider_margin"
        android:background="@color/black" />
</LinearLayout>